--- a/frontend/src/components/Blog/styles.css
+++ b/frontend/src/components/Blog/styles.css
@@ -51,7 +51,7 @@ button:active {
     margin-right: 0;
   }
 
-  input[type=text] {
+  .input[type=text] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
