--- a/frontend/src/components/Blog/styles.css
+++ b/frontend/src/components/Blog/styles.css
@@ -2,7 +2,7 @@
     display: inline-block;
     height: 38px;
     padding: 0 30px;
-    color: white;
+    color: blue;
     text-align: center;
     font-size: 11px;
     font-weight: 700;
@@ -12,7 +12,7 @@
     text-decoration: none;
     white-space: nowrap;
     border-radius: 2px;
-    background-color: #331550;
+    background-color: whitesmoke;
     border: 1px solid #331550;
     cursor: pointer;
     box-sizing: border-box;
